Satishsfdc5/src/Apttus Quote/Proposal-Configuration Integration/objects/ProposalProductAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class in a proposal line item</description>
    <fields>
        <fullName>Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LineItemId__c</fullName>
        <description>ID of the associated proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Product Attribute Values</relationshipLabel>
        <relationshipName>ProductAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proposal Product Attribute Value</label>
    <nameField>
        <displayFormat>VL-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>